chore(tutorial): minor tweak to initial tutorial page

--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,6 @@
 </head>
 
 <body>
-Hello World!
+Hello Carbon for IBM.com! Well, not quite yet. This is the starting point for the Carbon for IBM.com tutorial.
 </body>
 </html>
