--- a/src/index.html
+++ b/src/index.html
@@ -85,166 +85,164 @@
         </div>
       </div>
       <dds-table-of-contents toc-layout="horizontal" stickyOffset="48">
-        <a name="1" data-title="Main benefits of analytics">
-          <dds-card-section-offset>
-            <dds-background-media
-              gradient-direction="left-to-right"
-              mobile-position="top"
-              alt="alt text"
-              default-src="./assets/images/WC-tutorial-example--card-section-offset.jpg">
-              <dds-image-item
-                media="(min-width: 620px)"
-                srcset="./assets/images/WC-tutorial-example--card-section-offset.jpg">
-              </dds-image-item>
-            </dds-background-media>
-            <dds-content-block-heading slot="heading"
-              >A quick look at the main benefits of
-              analytics</dds-content-block-heading
-            >
-            <dds-text-cta
-              slot="action"
-              cta-type="local"
-              icon-placement="right"
-              href="https://example.com">
-              See the full range of benefits
-            </dds-text-cta>
-            <dds-card-group slot="card-group" cards-per-row="2">
-              <dds-card-group-item empty></dds-card-group-item>
-              <dds-card-group-item href="https://example.com">
-                <dds-card-eyebrow>Collaboration</dds-card-eyebrow>
-                <dds-card-heading
-                  >Connect teams across functions</dds-card-heading
-                >
-                <p>
-                  Collaborate in teams across functions to access all trusted
-                  data and best-in- class technologies.
-                </p>
-                <dds-card-cta-footer slot="footer">
-                  <svg
-                    slot="icon"
-                    focusable="false"
-                    preserveAspectRatio="xMidYMid meet"
-                    xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20">
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </svg>
-                </dds-card-cta-footer>
-              </dds-card-group-item>
-              <dds-card-group-item href="https://example.com">
-                <dds-card-eyebrow>Innovation</dds-card-eyebrow>
-                <dds-card-heading
-                  >Discover new insights from data</dds-card-heading
-                >
-                <p>
-                  Use multiple analytics technologies to learn from data and
-                  quickly get new answers for your business.
-                </p>
-                <dds-card-cta-footer slot="footer">
-                  <svg
-                    slot="icon"
-                    focusable="false"
-                    preserveAspectRatio="xMidYMid meet"
-                    xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20">
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </svg>
-                </dds-card-cta-footer>
-              </dds-card-group-item>
-              <dds-card-group-item href="https://example.com">
-                <dds-card-eyebrow>Fast delivery</dds-card-eyebrow>
-                <dds-card-heading
-                  >Accelerate delivery of insights</dds-card-heading
-                >
-                <p>
-                  Deliver new insights to your business quickly, and
-                  continuously improve them through rapid iteration.
-                </p>
-                <dds-card-cta-footer slot="footer">
-                  <svg
-                    slot="icon"
-                    focusable="false"
-                    preserveAspectRatio="xMidYMid meet"
-                    xmlns="http://www.w3.org/2000/svg"
-                    aria-hidden="true"
-                    width="20"
-                    height="20"
-                    viewBox="0 0 20 20">
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </svg>
-                </dds-card-cta-footer>
-              </dds-card-group-item>
-            </dds-card-group>
-          </dds-card-section-offset>
-        </a>
-        <a name="2" data-title="Engage an expert">
-          <div class="dark-theme">
-            <dds-cta-section>
-              <dds-content-section-heading slot="heading"
-                >Take the next step</dds-content-section-heading
+        <a name="3" data-title="Main benefits of analytics"></a>
+        <dds-card-section-offset>
+          <dds-background-media
+            gradient-direction="left-to-right"
+            mobile-position="top"
+            alt="alt text"
+            default-src="./assets/images/WC-tutorial-example--card-section-offset.jpg">
+            <dds-image-item
+              media="(min-width: 620px)"
+              srcset="./assets/images/WC-tutorial-example--card-section-offset.jpg">
+            </dds-image-item>
+          </dds-background-media>
+          <dds-content-block-heading slot="heading"
+            >A quick look at the main benefits of
+            analytics</dds-content-block-heading
+          >
+          <dds-text-cta
+            slot="action"
+            cta-type="local"
+            icon-placement="right"
+            href="https://example.com">
+            See the full range of benefits
+          </dds-text-cta>
+          <dds-card-group slot="card-group" cards-per-row="2">
+            <dds-card-group-item empty></dds-card-group-item>
+            <dds-card-group-item href="https://example.com">
+              <dds-card-eyebrow>Collaboration</dds-card-eyebrow>
+              <dds-card-heading
+                >Connect teams across functions</dds-card-heading
               >
-              <dds-cta-block no-border>
-                <dds-content-block-heading
-                  >Engage an expert</dds-content-block-heading
-                >
-                <dds-content-block-copy
-                  >Schedule a one-on-one, no-cost consultation with experts to
-                  accelerate your integration of analytics services.
-                </dds-content-block-copy>
-                <dds-text-cta
-                  slot="action"
-                  cta-type="local"
-                  icon-placement="right"
-                  href="example.com"
-                  >Book a consultation</dds-text-cta
-                >
-                <dds-link-list slot="link-list" type="end">
-                  <dds-link-list-heading
-                    >More ways to explore IBM analytics services
-                  </dds-link-list-heading>
-                  <dds-link-list-item href="https://example.com">
-                    Events
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </dds-link-list-item>
-                  <dds-link-list-item href="https://example.com">
-                    Blogs
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </dds-link-list-item>
-                  <dds-link-list-item href="https://example.com">
-                    Training
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </dds-link-list-item>
-                  <dds-link-list-item href="https://example.com">
-                    Developer resources
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </dds-link-list-item>
-                  <dds-link-list-item href="https://example.com">
-                    Research
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </dds-link-list-item>
-                  <dds-link-list-item href="https://example.com">
-                    News
-                    <path
-                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                  </dds-link-list-item>
-                </dds-link-list>
-              </dds-cta-block>
-            </dds-cta-section>
-          </div>
-        </a>
+              <p>
+                Collaborate in teams across functions to access all trusted
+                data and best-in- class technologies.
+              </p>
+              <dds-card-cta-footer slot="footer">
+                <svg
+                  slot="icon"
+                  focusable="false"
+                  preserveAspectRatio="xMidYMid meet"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </svg>
+              </dds-card-cta-footer>
+            </dds-card-group-item>
+            <dds-card-group-item href="https://example.com">
+              <dds-card-eyebrow>Innovation</dds-card-eyebrow>
+              <dds-card-heading
+                >Discover new insights from data</dds-card-heading
+              >
+              <p>
+                Use multiple analytics technologies to learn from data and
+                quickly get new answers for your business.
+              </p>
+              <dds-card-cta-footer slot="footer">
+                <svg
+                  slot="icon"
+                  focusable="false"
+                  preserveAspectRatio="xMidYMid meet"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </svg>
+              </dds-card-cta-footer>
+            </dds-card-group-item>
+            <dds-card-group-item href="https://example.com">
+              <dds-card-eyebrow>Fast delivery</dds-card-eyebrow>
+              <dds-card-heading
+                >Accelerate delivery of insights</dds-card-heading
+              >
+              <p>
+                Deliver new insights to your business quickly, and
+                continuously improve them through rapid iteration.
+              </p>
+              <dds-card-cta-footer slot="footer">
+                <svg
+                  slot="icon"
+                  focusable="false"
+                  preserveAspectRatio="xMidYMid meet"
+                  xmlns="http://www.w3.org/2000/svg"
+                  aria-hidden="true"
+                  width="20"
+                  height="20"
+                  viewBox="0 0 20 20">
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </svg>
+              </dds-card-cta-footer>
+            </dds-card-group-item>
+          </dds-card-group>
+        </dds-card-section-offset>
+        <a name="5" data-title="Engage an expert"></a>
+        <div class="dark-theme">
+          <dds-cta-section>
+            <dds-content-section-heading slot="heading"
+              >Take the next step</dds-content-section-heading
+            >
+            <dds-cta-block no-border>
+              <dds-content-block-heading
+                >Engage an expert</dds-content-block-heading
+              >
+              <dds-content-block-copy
+                >Schedule a one-on-one, no-cost consultation with experts to
+                accelerate your integration of analytics services.
+              </dds-content-block-copy>
+              <dds-text-cta
+                slot="action"
+                cta-type="local"
+                icon-placement="right"
+                href="example.com"
+                >Book a consultation</dds-text-cta
+              >
+              <dds-link-list slot="link-list" type="end">
+                <dds-link-list-heading
+                  >More ways to explore IBM analytics services
+                </dds-link-list-heading>
+                <dds-link-list-item href="https://example.com">
+                  Events
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Blogs
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Training
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Developer resources
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Research
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  News
+                  <path
+                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                </dds-link-list-item>
+              </dds-link-list>
+            </dds-cta-block>
+          </dds-cta-section>
+        </div>
       </dds-table-of-contents>
     </dds-dotcom-shell-container>
   </body>
