--- a/src/index.html
+++ b/src/index.html
@@ -85,7 +85,7 @@
         </div>
       </div>
       <dds-table-of-contents toc-layout="horizontal" stickyOffset="48">
-        <a name="1" data-title="Main benefits of analytics"></a>
+        <a name="1" data-title="Smarter decisions"></a>
         <dds-content-section>
           <dds-content-section-heading>Smarter decisions</dds-content-section-heading>
           <dds-content-block complementary-style-scheme="with-border">
