--- a/src/index.html
+++ b/src/index.html
@@ -96,11 +96,16 @@
               media="(min-width: 620px)"
               srcset="./assets/images/card-section-offset.jpg">
             </dds-image-item>
+            <dds-image-item
+              media="(max-width: 619px)"
+              srcset="./assets/images/card-section-offset--sm.jpg">
+            </dds-image-item>
           </dds-background-media>
           <dds-content-block-heading slot="heading"
             >A quick look at the main benefits of
-            analytics</dds-content-block-heading
-          >
+            analytics
+          </dds-content-block-heading
+            >
           <dds-text-cta
             slot="action"
             cta-type="local"
@@ -110,80 +115,39 @@
           </dds-text-cta>
           <dds-card-group slot="card-group" cards-per-row="2">
             <dds-card-group-item empty></dds-card-group-item>
-            <dds-card-group-item href="https://example.com">
+            <dds-card-group-item cta-type="local" href="https://example.com">
               <dds-card-eyebrow>Collaboration</dds-card-eyebrow>
               <dds-card-heading
                 >Connect teams across functions</dds-card-heading
-              >
+                >
               <p>
-                Collaborate in teams across functions to access all trusted
-                data and best-in- class technologies.
+                Collaborate in teams across functions to access all trusted data
+                and best-in- class technologies.
               </p>
-              <dds-card-cta-footer slot="footer">
-                <svg
-                  slot="icon"
-                  focusable="false"
-                  preserveAspectRatio="xMidYMid meet"
-                  xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20">
-                  <path
-                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                </svg>
-              </dds-card-cta-footer>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
-            <dds-card-group-item href="https://example.com">
+            <dds-card-group-item cta-type="local" href="https://example.com">
               <dds-card-eyebrow>Innovation</dds-card-eyebrow>
               <dds-card-heading
                 >Discover new insights from data</dds-card-heading
-              >
+                >
               <p>
                 Use multiple analytics technologies to learn from data and
                 quickly get new answers for your business.
               </p>
-              <dds-card-cta-footer slot="footer">
-                <svg
-                  slot="icon"
-                  focusable="false"
-                  preserveAspectRatio="xMidYMid meet"
-                  xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20">
-                  <path
-                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                </svg>
-              </dds-card-cta-footer>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
-            <dds-card-group-item href="https://example.com">
+            <dds-card-group-item cta-type="local" href="https://example.com">
               <dds-card-eyebrow>Fast delivery</dds-card-eyebrow>
               <dds-card-heading
                 >Accelerate delivery of insights</dds-card-heading
-              >
+                >
               <p>
-                Deliver new insights to your business quickly, and
-                continuously improve them through rapid iteration.
+                Deliver new insights to your business quickly, and continuously
+                improve them through rapid iteration.
               </p>
-              <dds-card-cta-footer slot="footer">
-                <svg
-                  slot="icon"
-                  focusable="false"
-                  preserveAspectRatio="xMidYMid meet"
-                  xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20">
-                  <path
-                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                </svg>
-              </dds-card-cta-footer>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
-          </dds-card-group>
-        </dds-card-section-offset>
         <a name="5" data-title="Engage an expert"></a>
         <div class="dark-theme">
           <dds-cta-section>
