fix(step-3): add closing tags

--- a/src/index.html
+++ b/src/index.html
@@ -148,6 +148,8 @@
               </p>
               <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
+          </dds-card-group>
+        </dds-card-section-offset>
         <a name="5" data-title="Engage an expert"></a>
         <div class="dark-theme">
           <dds-cta-section>
