fix(step-4): add assets and correct index.html

--- a/src/index.html
+++ b/src/index.html
@@ -96,37 +96,37 @@
               <dds-content-group-heading>Analytics services</dds-content-group-heading>
               <dds-content-group-copy>Work together in a simpler way to find new and unexpected insights quickly and deliver business-changing results with state-of-the-art services.</dds-content-group-copy>
 
-              <dds-card-group class="bx--no-gutter">
+              <dds-card-group>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--analytics-services-card1.png"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card1.png"></dds-image>
                   <dds-card-eyebrow>Apache Spark and Hadoop service</dds-card-eyebrow>
                   <dds-card-heading>IBM® Analytics Engine</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
                   </dds-card-cta-footer>
                 </dds-card-group-item>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--analytics-services-card2.png"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card2.png"></dds-image>
                   <dds-card-eyebrow>Cluster computing framework</dds-card-eyebrow>
                   <dds-card-heading>Apache Spark</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
                   </dds-card-cta-footer>
                 </dds-card-group-item>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--analytics-services-card3.png"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card3.png"></dds-image>
                   <dds-card-eyebrow>IBM Cloud</dds-card-eyebrow>
                   <dds-card-heading>IBM Information Server on Cloud®</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
                   </dds-card-cta-footer>
                 </dds-card-group-item>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--analytics-services-card4.png"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card4.png"></dds-image>
                   <dds-card-eyebrow>Data trust service</dds-card-eyebrow>
                   <dds-card-heading>IBM® Master Data Management on Cloud</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
                   </dds-card-cta-footer>
                 </dds-card-group-item>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--analytics-services-card5.png"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/analytics-services-card5.png"></dds-image>
                   <dds-card-eyebrow>Data range analysis</dds-card-eyebrow>
                   <dds-card-heading>IBM® Streaming Analytics</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
@@ -151,21 +151,21 @@
               <dds-content-group-heading>More customer stories</dds-content-group-heading>
               <dds-card-group>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--client-story-card1.jpg"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/client-story-card1.jpg"></dds-image>
                   <dds-card-eyebrow>IBM Watson Discovery</dds-card-eyebrow>
                   <dds-card-heading>Citi Bank transforms internal audit practice</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
                   </dds-card-cta-footer>
                 </dds-card-group-item>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--client-story-card2.jpg"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/client-story-card2.jpg"></dds-image>
                   <dds-card-eyebrow>IBM Cloud Pak</dds-card-eyebrow>
                   <dds-card-heading>ING carries out data fabric vision</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
                   </dds-card-cta-footer>
                 </dds-card-group-item>
                 <dds-card-group-item cta-type='local' href='https://example.com'>
-                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/WC-tutorial-example--client-story-card3.jpg"></dds-image>
+                  <dds-image slot="image" alt="Image alt text" default-src="./assets/images/client-story-card3.jpg"></dds-image>
                   <dds-card-eyebrow>IBM Cloud Pak for Data</dds-card-eyebrow>
                   <dds-card-heading>Innocence tackles neonate mortality rates with AI</dds-card-heading>
                   <dds-card-cta-footer cta-type='local'>
@@ -185,15 +185,20 @@
             gradient-direction="left-to-right"
             mobile-position="top"
             alt="alt text"
-            default-src="./assets/images/WC-tutorial-example--card-section-offset.jpg">
+            default-src="./assets/images/card-section-offset.jpg">
             <dds-image-item
               media="(min-width: 620px)"
-              srcset="./assets/images/WC-tutorial-example--card-section-offset.jpg">
+              srcset="./assets/images/card-section-offset.jpg">
+            </dds-image-item>
+            <dds-image-item>
+              media="(min-width: 619px)"
+              srcset="./assets/images/card-section-offset--sm.jpg">
             </dds-image-item>
           </dds-background-media>
           <dds-content-block-heading slot="heading"
             >A quick look at the main benefits of
-            analytics</dds-content-block-heading
+            analytics
+          </dds-content-block-heading
           >
           <dds-text-cta
             slot="action"
@@ -204,31 +209,18 @@
           </dds-text-cta>
           <dds-card-group slot="card-group" cards-per-row="2">
             <dds-card-group-item empty></dds-card-group-item>
-            <dds-card-group-item href="https://example.com">
+            <dds-card-group-item cta-type="local" href="https://example.com">
               <dds-card-eyebrow>Collaboration</dds-card-eyebrow>
               <dds-card-heading
                 >Connect teams across functions</dds-card-heading
-              >
+               >
               <p>
-                Collaborate in teams across functions to access all trusted
-                data and best-in- class technologies.
+                Collaborate in teams across functions to access all trusted data
+                and best-in- class technologies.
               </p>
-              <dds-card-cta-footer slot="footer">
-                <svg
-                  slot="icon"
-                  focusable="false"
-                  preserveAspectRatio="xMidYMid meet"
-                  xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20">
-                  <path
-                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                </svg>
-              </dds-card-cta-footer>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
-            <dds-card-group-item href="https://example.com">
+            <dds-card-group-item cta-type="local" href="https://example.com">
               <dds-card-eyebrow>Innovation</dds-card-eyebrow>
               <dds-card-heading
                 >Discover new insights from data</dds-card-heading
@@ -237,22 +229,9 @@
                 Use multiple analytics technologies to learn from data and
                 quickly get new answers for your business.
               </p>
-              <dds-card-cta-footer slot="footer">
-                <svg
-                  slot="icon"
-                  focusable="false"
-                  preserveAspectRatio="xMidYMid meet"
-                  xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20">
-                  <path
-                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                </svg>
-              </dds-card-cta-footer>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
-            <dds-card-group-item href="https://example.com">
+            <dds-card-group-item cta-type="local" href="https://example.com">
               <dds-card-eyebrow>Fast delivery</dds-card-eyebrow>
               <dds-card-heading
                 >Accelerate delivery of insights</dds-card-heading
@@ -261,20 +240,7 @@
                 Deliver new insights to your business quickly, and
                 continuously improve them through rapid iteration.
               </p>
-              <dds-card-cta-footer slot="footer">
-                <svg
-                  slot="icon"
-                  focusable="false"
-                  preserveAspectRatio="xMidYMid meet"
-                  xmlns="http://www.w3.org/2000/svg"
-                  aria-hidden="true"
-                  width="20"
-                  height="20"
-                  viewBox="0 0 20 20">
-                  <path
-                    d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
-                </svg>
-              </dds-card-cta-footer>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
             </dds-card-group-item>
           </dds-card-group>
         </dds-card-section-offset>
@@ -295,7 +261,7 @@
               <dds-content-item>
                 <dds-content-item-heading>Spin up and scale on demand</dds-content-item-heading>
                 <dds-image-with-caption
-                        default-src="./assets/images/WC-tutorial-example--ibm-analytics-engine-img.png"
+                        default-src="./assets/images/ibm-analytics-engine-img.png"
                         heading="Graphical depiction of analytics clusters"
                         copy="lorum ipsum"
                         lightbox
