fix(step-4): add assets and correct index.html

--- a/src/index.html
+++ b/src/index.html
@@ -190,7 +190,7 @@
               media="(min-width: 620px)"
               srcset="./assets/images/card-section-offset.jpg">
             </dds-image-item>
-            <dds-image-item>
+            <dds-image-item
               media="(min-width: 619px)"
               srcset="./assets/images/card-section-offset--sm.jpg">
             </dds-image-item>
