chore(mergify): testing mergify configuration

--- a/src/index.html
+++ b/src/index.html
@@ -10,5 +10,7 @@
 
 <body>
 Hello Carbon for IBM.com! Well, not quite yet. This is the starting point for the Carbon for IBM.com tutorial.
+
+Testing if this works.
 </body>
 </html>
