test(tutorial): add step 4 tests

--- a/src/index.html
+++ b/src/index.html
@@ -437,7 +437,7 @@
 
               <bx-tabs value="table">
                 <bx-tab id="table" target="panel-table" value="table">Data table</bx-tab>
-                <bx-tab id="list" target="panel-list" value="list">Structured ist</bx-tab>
+                <bx-tab id="list" target="panel-list" value="list">Structured list</bx-tab>
                 <bx-tab id="dropdown" target="panel-dropdown" value="dropdown">Dropdown</bx-tab>
                 <bx-tab id="radio-buttons" target="panel-radio-buttons" value="radio-buttons">Radio buttons</bx-tab>
               </bx-tabs>
