--- a/src/index.html
+++ b/src/index.html
@@ -1,68 +1,278 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
-<head>
-  <meta http-equiv="Content-Language" content="en">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-  <title>Carbon for IBM.com Tutorial</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
-  <meta charset="UTF-8">
+  <head>
+    <meta http-equiv="Content-Language" content="en" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Carbon for IBM.com Tutorial</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta
+      name="description"
+      content="This is an example page for the Carbon for IBM.com Tutorial" />
+    <meta charset="UTF-8" />
 
-  <link rel="icon" href="//www.ibm.com/favicon.ico">
+    <link rel="icon" href="//www.ibm.com/favicon.ico" />
 
-  <meta name="dcterms.date" content="1955-11-05">
-  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021">
-  <meta name="geo.country" content="US">
-  <meta name="robots" content="index,follow">
+    <meta name="dcterms.date" content="1955-11-05" />
+    <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
+    <meta name="geo.country" content="US" />
+    <meta name="robots" content="index,follow" />
 
-  <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en">
-  <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr">
-  <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko">
-  <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja">
+    <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
+    <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
+    <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
+    <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
 
-  <script>
-    window.digitalData = {
-      page: {
-        category: {
-          primaryCategory: '' // e.g. SB03
+    <script>
+      window.digitalData = {
+        page: {
+          category: {
+            primaryCategory: '', // e.g. SB03
+          },
+          pageInfo: {
+            effectiveDate: '', // e.g. 2014-11-19
+            expiryDate: '', // e.g. 2017-11-19
+            language: 'en-US', // e.g. en-US
+            publishDate: '', // e.g. 2014-11-19
+            publisher: '', // e.g. IBM Corporation
+            version: 'Carbon for IBM.com',
+            ibm: {
+              contentDelivery: '', // e.g. ECM/Filegen
+              contentProducer: '', // e.g. ECM/IConS Adopter 34 - GS83J2343G3H3ERG - 11/19/2014 05:14:02 PM
+              country: 'US', // e.g. US
+              industry: '', // e.g. B,U
+              owner: '', // e.g. Some Person/City/IBM
+              siteID: '', // e.g. MySiteID
+              subject: '', // e.g. SW492
+              type: '', // e.g CT305
+            },
+          },
         },
-        pageInfo: {
-          effectiveDate: '', // e.g. 2014-11-19
-          expiryDate: '', // e.g. 2017-11-19
-          language: 'en-US', // e.g. en-US
-          publishDate: '', // e.g. 2014-11-19
-          publisher: '', // e.g. IBM Corporation
-          version: 'Carbon for IBM.com',
-          ibm: {
-            contentDelivery: '', // e.g. ECM/Filegen
-            contentProducer: '', // e.g. ECM/IConS Adopter 34 - GS83J2343G3H3ERG - 11/19/2014 05:14:02 PM
-            country: 'US', // e.g. US
-            industry: '', // e.g. B,U
-            owner: '', // e.g. Some Person/City/IBM
-            siteID: '', // e.g. MySiteID
-            subject: '', // e.g. SW492
-            type: '' // e.g CT305
-          }
-        }
+      };
+
+      var params = new URLSearchParams(window.location.search);
+
+      if (params.has('lc') && params.has('cc')) {
+        var currentLang =
+          params.get('lc') + '-' + params.get('cc').toUpperCase();
+        document
+          .getElementsByTagName('html')[0]
+          .setAttribute('lang', currentLang);
+        digitalData.page.pageInfo.language = currentLang;
+        digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
       }
-    };
+    </script>
 
-    var params = new URLSearchParams(window.location.search);
+    <script
+      src="//1.www.s81c.com/common/stats/ibm-common.js"
+      type="text/javascript"
+      async="async"></script>
+  </head>
 
-    if(params.has('lc') && params.has('cc')) {
-      var currentLang = params.get('lc') + '-' + params.get('cc').toUpperCase();
-      document.getElementsByTagName("html")[0].setAttribute("lang", currentLang);
-      digitalData.page.pageInfo.language = currentLang;
-      digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
-    }
-  </script>
-
-  <script src="//1.www.s81c.com/common/stats/ibm-common.js" type="text/javascript" async="async"></script>
-</head>
-
-<body>
-<dds-dotcom-shell-container>
-  <main>Hello World!</main>
-</dds-dotcom-shell-container>
-</body>
+  <body>
+    <dds-dotcom-shell-container>
+      <div class="bx--grid">
+        <div class="bx--row">
+          <div class="bx--col-lg-8 bx--offset-lg-4 bx--no-gutter">
+            <dds-leadspace-with-search adjacent-theme="g90-and-g100">
+              <dds-leadspace-block-heading slot="heading"
+                >Find analytics services</dds-leadspace-block-heading
+              >
+              <dds-leadspace-block-content slot="content">
+                <dds-leadspace-search-block-heading
+                  >Make fast and accurate data-based decisions
+                </dds-leadspace-search-block-heading>
+              </dds-leadspace-block-content>
+              <dds-search-with-typeahead
+                slot="search"
+                leadspace-search></dds-search-with-typeahead>
+            </dds-leadspace-with-search>
+          </div>
+        </div>
+      </div>
+      <dds-table-of-contents toc-layout="horizontal" stickyOffset="48">
+        <a name="3" data-title="Main benefits of analytics"></a>
+        <dds-card-section-offset>
+          <dds-background-media
+            gradient-direction="left-to-right"
+            mobile-position="top"
+            alt="alt text"
+            default-src="./assets/images/card-section-offset.jpg">
+            <dds-image-item
+              media="(min-width: 620px)"
+              srcset="./assets/images/card-section-offset.jpg">
+            </dds-image-item>
+            <dds-image-item
+              media="(max-width: 619px)"
+              srcset="./assets/images/card-section-offset--sm.jpg">
+            </dds-image-item>
+          </dds-background-media>
+          <dds-content-block-heading slot="heading"
+            >A quick look at the main benefits of analytics
+          </dds-content-block-heading>
+          <dds-text-cta
+            slot="action"
+            cta-type="local"
+            icon-placement="right"
+            href="https://example.com">
+            See the full range of benefits
+          </dds-text-cta>
+          <dds-card-group slot="card-group" cards-per-row="2">
+            <dds-card-group-item empty></dds-card-group-item>
+            <dds-card-group-item cta-type="local" href="https://example.com">
+              <dds-card-eyebrow>Collaboration</dds-card-eyebrow>
+              <dds-card-heading
+                >Connect teams across functions</dds-card-heading
+              >
+              <p>
+                Collaborate in teams across functions to access all trusted data
+                and best-in- class technologies.
+              </p>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
+            </dds-card-group-item>
+            <dds-card-group-item cta-type="local" href="https://example.com">
+              <dds-card-eyebrow>Innovation</dds-card-eyebrow>
+              <dds-card-heading
+                >Discover new insights from data</dds-card-heading
+              >
+              <p>
+                Use multiple analytics technologies to learn from data and
+                quickly get new answers for your business.
+              </p>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
+            </dds-card-group-item>
+            <dds-card-group-item cta-type="local" href="https://example.com">
+              <dds-card-eyebrow>Fast delivery</dds-card-eyebrow>
+              <dds-card-heading
+                >Accelerate delivery of insights</dds-card-heading
+              >
+              <p>
+                Deliver new insights to your business quickly, and continuously
+                improve them through rapid iteration.
+              </p>
+              <dds-card-cta-footer slot="footer"> </dds-card-cta-footer>
+            </dds-card-group-item>
+          </dds-card-group>
+        </dds-card-section-offset>
+        <a name="5" data-title="Engage an expert"></a>
+        <div class="dark-theme">
+          <dds-cta-section>
+            <dds-content-section-heading slot="heading"
+              >Take the next step</dds-content-section-heading
+            >
+            <dds-cta-block no-border>
+              <dds-content-block-heading
+                >Engage an expert</dds-content-block-heading
+              >
+              <dds-content-block-copy
+                >Schedule a one-on-one, no-cost consultation with experts to
+                accelerate your integration of analytics services.
+              </dds-content-block-copy>
+              <dds-text-cta
+                slot="action"
+                cta-type="local"
+                icon-placement="right"
+                href="example.com"
+                >Book a consultation</dds-text-cta
+              >
+              <dds-link-list slot="link-list" type="end">
+                <dds-link-list-heading
+                  >More ways to explore IBM analytics services
+                </dds-link-list-heading>
+                <dds-link-list-item href="https://example.com">
+                  Events
+                  <svg
+                    slot="icon"
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20">
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                  </svg>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Blogs
+                  <svg
+                    slot="icon"
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20">
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                  </svg>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Training
+                  <svg
+                    slot="icon"
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20">
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                  </svg>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Developer resources
+                  <svg
+                    slot="icon"
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20">
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                  </svg>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  Research
+                  <svg
+                    slot="icon"
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20">
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                  </svg>
+                </dds-link-list-item>
+                <dds-link-list-item href="https://example.com">
+                  News
+                  <svg
+                    slot="icon"
+                    focusable="false"
+                    preserveAspectRatio="xMidYMid meet"
+                    xmlns="http://www.w3.org/2000/svg"
+                    aria-hidden="true"
+                    width="20"
+                    height="20"
+                    viewBox="0 0 20 20">
+                    <path
+                      d="M11.8 2.8L10.8 3.8 16.2 9.3 1 9.3 1 10.7 16.2 10.7 10.8 16.2 11.8 17.2 19 10z"></path>
+                  </svg>
+                </dds-link-list-item>
+              </dds-link-list>
+            </dds-cta-block>
+          </dds-cta-section>
+        </div>
+      </dds-table-of-contents>
+    </dds-dotcom-shell-container>
+  </body>
 </html>
