--- a/src/index.html
+++ b/src/index.html
@@ -31,14 +31,14 @@
           pageInfo: {
             effectiveDate: '', // e.g. 2014-11-19
             expiryDate: '', // e.g. 2017-11-19
-            language: '', // e.g. en-US
+            language: 'en-US', // e.g. en-US
             publishDate: '', // e.g. 2014-11-19
             publisher: '', // e.g. IBM Corporation
             version: 'Carbon for IBM.com',
             ibm: {
               contentDelivery: '', // e.g. ECM/Filegen
               contentProducer: '', // e.g. ECM/IConS Adopter 34 - GS83J2343G3H3ERG - 11/19/2014 05:14:02 PM
-              country: '', // e.g. US
+              country: 'US', // e.g. US
               industry: '', // e.g. B,U
               owner: '', // e.g. Some Person/City/IBM
               siteID: '', // e.g. MySiteID
@@ -48,41 +48,18 @@
           },
         },
       };
-    </script>
-
-    <script>
-      window.digitalData = {
-        page: {
-            ...
-            pageInfo: {
-                ...
-                language: 'en-US',
-                ...
-                ibm: {
-                    ...
-                    country: 'US',
-                    ...
-                }
-            }
-        }
-      };
-    </script>
-
-    <script>
-      window.digitalData = {
-        ...
-      };
-
       var params = new URLSearchParams(window.location.search);
 
-      if(params.has('lc') && params.has('cc')) {
-        var currentLang = params.get('lc') + '-' + params.get('cc').toUpperCase();
-        document.getElementsByTagName("html")[0].setAttribute("lang", currentLang);
+      if (params.has('lc') && params.has('cc')) {
+        var currentLang =
+          params.get('lc') + '-' + params.get('cc').toUpperCase();
+        document
+          .getElementsByTagName('html')[0]
+          .setAttribute('lang', currentLang);
         digitalData.page.pageInfo.language = currentLang;
         digitalData.page.pageInfo.ibm.country = params.get('cc').toUpperCase();
       }
     </script>
-
     <script
       src="//1.www.s81c.com/common/stats/ibm-common.js"
       type="text/javascript"
