feat(tutorial): complete step 1

--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="UTF-8" />
+
+    <link rel="icon" href="//www.ibm.com/favicon.ico" />
+
+    <meta name="dcterms.date" content="2022-02-08" />
+    // replace with today's date
+    <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
+    <meta name="geo.country" content="US" />
+    <meta name="robots" content="index,follow" />
     <meta http-equiv="Content-Language" content="en" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Carbon for IBM.com Tutorial</title>
@@ -16,15 +25,6 @@
       src="//1.www.s81c.com/common/stats/ibm-common.js"
       type="text/javascript"
       async="async"></script>
-    <meta charset="UTF-8" />
-
-    <link rel="icon" href="//www.ibm.com/favicon.ico" />
-
-    <meta name="dcterms.date" content="YYYY-MM-DD" />
-    // replace with today's date
-    <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
-    <meta name="geo.country" content="US" />
-    <meta name="robots" content="index,follow" />
     <script>
       window.digitalData = {
         page: {
