feat(tutorial): complete step 2

--- a/src/index.html
+++ b/src/index.html
@@ -62,6 +62,7 @@
 
 <body>
 <dds-dotcom-shell-container>
+  <main>Hello World!</main>
   <div class="bx--grid">
     <div class="bx--row">
       <div class="bx--col-lg-8 bx--offset-lg-4 bx--no-gutter">
