feat(tutorial): complete step 1

--- a/src/index.html
+++ b/src/index.html
@@ -60,14 +60,13 @@
         type = "text/javascript"
         async = "async"
     </script>
-
 </head>
 
 <body>
 
     <body>
         <dds-dotcom-shell-container>
-            <main>Hello World!</main>
+            <main>Hello World!!!</main>
         </dds-dotcom-shell-container>
     </body>
 
