feat(tutorial): complete step 1

--- a/src/index.html
+++ b/src/index.html
@@ -2,6 +2,23 @@
 <html>
 
 <head>
+  <meta http-equiv="Content-Language" content="en">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+  <title>Carbon for IBM.com Tutorial</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
+  <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
+  <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
+  <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
+  <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
+  <meta charset="UTF-8" />
+
+  <link rel="icon" href="//www.ibm.com/favicon.ico" />
+  
+  <meta name="dcterms.date" content="YYYY-MM-DD" /> // replace with today's date
+  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
+  <meta name="geo.country" content="US" />
+  <meta name="robots" content="index,follow" />
   <script>
     window.digitalData = {
       page: {
@@ -39,20 +56,6 @@
     }
   </script>
   <script src="//1.www.s81c.com/common/stats/ibm-common.js" type="text/javascript" async="async"></script>
-  <link rel="icon" href="//www.ibm.com/favicon.ico" />
-  <meta name="dcterms.date" content="2022-04-29" /> // replace with today's date
-  <meta name="dcterms.rights" content="© Copyright IBM Corp. 2021" />
-  <meta name="geo.country" content="US" />
-  <meta name="robots" content="index,follow" />
-  <meta http-equiv="Content-Language" content="en">
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Carbon for IBM.com Tutorial</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="description" content="This is an example page for the Carbon for IBM.com Tutorial" />
-  <link rel="alternate" hreflang="en-us" href="./index.html?cc=us&lc=en" />
-  <link rel="alternate" hreflang="fr-ca" href="./index.html?cc=ca&lc=fr" />
-  <link rel="alternate" hreflang="ko-kr" href="./index.html?cc=kr&lc=ko" />
-  <link rel="alternate" hreflang="ja-jp" href="./index.html?cc=jp&lc=ja" />
 
 </head>
 
